# 4WD-CAR-ROMA

./: .gitmodules  README.md  car_setup.sh  corner-h_2022-05-24-17-15-19.bag.active  rosbag.sh  spawn_can.sh  spawn_servo.sh  test.csv
apps/: HowToAddIconForFastLaunch.md  platform-launch.desktop
build.bak/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  catkin_make.cache  cmake_install.cmake
build.bak/atomic_configure/: .rosinstall  local_setup.sh  setup.sh
build.bak/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
build.bak/catkin_generated/installspace/: .rosinstall  local_setup.sh  setup.sh
build.bak/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build.bak/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build.bak/gtest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build.bak/pro_lower_controller/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build.bak/pro_lower_controller/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
build.bak/rostxtest_mod/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build.bak/rostxtest_mod/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
build.bak/rplidar_ros/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build.bak/rplidar_ros/catkin_generated/: pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
build.bak/sbus_serial/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build.bak/sbus_serial/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  sbus_serial-msg-extras.cmake.develspace.in  sbus_serial-msg-extras.cmake.installspace.in
build.bak/sbus_serial/cmake/: sbus_serial-genmsg-context.py  sbus_serial-genmsg.cmake
build.bak/slam_sim_demo/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build.bak/slam_sim_demo/catkin_generated/: pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/lqr_control/include/: common.h  lqr_controller.h
src/lqr_control/launch/: demo.launch
src/lqr_control/src/: lqr_controller.cpp  lqr_controller_node.cpp
src/mbf_navigation/: CMakeLists.txt  package.xml
src/mbf_navigation/launch/: nav_mb.launch
src/mbf_navigation/launch/includes/: amcl.launch.xml  rf2o.launch.xml  rplidar.launch.xml  rs_d435_camera_with_model.launch  rs_t265_odom.launch.xml  srf_laser_odometry.launch.xml
src/mbf_navigation/maps/: 627.yaml  631.pgm  631.yaml  floor-6.pgm  floor-6.yaml  under.pgm  under.yaml
src/mbf_navigation/param/: base_global_planner_params.yaml  ekf_params.yaml  ekf_params_t265.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
src/mbf_navigation/src/: client.py  getpoints.py  goal_flag.py  server.py
src/mbf_navigation/src/ui/: factor.pgm  map.ui
src/path_load/: CMakeLists.txt  package.xml
src/path_load/launch/: path.launch
src/path_load/src/: data_curve.csv  data_small.csv  data_square.csv  double-lane.csv  double_line.csv  half-cirecle.csv  path_load.py  straight.csv  straight_20m.csv
src/pro_lower_controller/: CMakeLists.txt  package.xml  readme.md
src/pro_lower_controller/docs/: demend.md
src/pro_lower_controller/launch/: asoc_base_indoor.launch  pro_platform.launch  visual_odom.launch
src/pro_lower_controller/rules/: laser.rules  rs232.rules  rules.md  sbus.rules  servo.rules
src/pro_lower_controller/rviz/: 0628outdoor.xml  odom.rviz  plotjuggler.xml
src/pro_lower_controller/src/: ButterworthFilter.ipynb  Platform_control.cpp  Ramp_Test.cpp  sbus_serial_driver.cpp
src/pro_lower_controller/src/include/: Platform_CAN.hpp  Platform_M3508.hpp  Platform_servo.hpp  Sbus.h
src/pro_upper_controller/: CMakeLists.txt  package.xml  packageInfo.mat
src/pro_upper_controller/include/pro_upper_controller/: MW_custom_RTOS_header.h  multiword_types.h  pro_upper_controller.h  pro_upper_controller_dt.h  pro_upper_controller_private.h  pro_upper_controller_types.h  rosnodeinterface.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtmodel.h  rtw_continuous.h  rtwtypes.h  slros_busmsg_conversion.h  slros_initialize.h  visibility_control.h
src/pro_upper_controller/src/: ext_svr.c  main.cpp  pro_upper_controller.cpp  pro_upper_controller_data.cpp  rosnodeinterface.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  slros_busmsg_conversion.cpp  slros_initialize.cpp
src/pure_pursuit_controller/: CMakeLists.txt  package.xml  paraset.txt  readme.md
src/pure_pursuit_controller/launch/: control_indoor.launch
src/pure_pursuit_controller/src/: upper_controller_angle.cpp
src/pure_pursuit_controller/src/include/: upper_controller.hpp
src/roma_car/: CMakeLists.txt  package.xml
src/roma_car/config/: joint_names_roma_car.yaml  show-roma-car.rviz
src/roma_car/launch/: display.launch  gazebo.launch  gazebo_test.launch
src/roma_car/meshes/: LB_drive_link.STL  LB_susp_link.STL  LF_drive_link.STL  LF_steer_link.STL  RB_drive_link.STL  RB_susp_link.STL  RF_drive_link.STL  RF_susp_link.STL  base_link.STL
src/roma_car/scripts/: control_plugin.py
src/roma_car/urdf/: roma_car.csv  roma_car.urdf  roma_car.urdf.xacro  test_urdf.m
src/rostxtest_mod/: CMakeLists.txt  package.xml  packageInfo.mat
src/rostxtest_mod/include/rostxtest_mod/: multiword_types.h  rosTxTest_mod.h  rosTxTest_mod_dt.h  rosTxTest_mod_private.h  rosTxTest_mod_types.h  rosnodeinterface.h  rtmodel.h  rtwtypes.h  slros_busmsg_conversion.h  slros_initialize.h  visibility_control.h
src/rostxtest_mod/src/: ext_work.c  main.cpp  rosTxTest_mod.cpp  rosTxTest_mod_data.cpp  rosnodeinterface.cpp  slros_busmsg_conversion.cpp  slros_initialize.cpp  updown.c
src/sensor_pack/: CMakeLists.txt  package.xml
src/sensor_pack/launch/: rs_t265_odom.launch
src/simulink/model/: upper_model.slx
src/slam_pack/: CMakeLists.txt  README.md  package.xml
src/slam_pack/launch/: cartographer_demo.launch  gmapping_demo.launch  (+2 more)
src/slam_sim_demo/: CMakeLists.txt
(+138 files in other folders)
